<resources>
    <string name="app_name">m7sob</string>
    <string name="login">LOGIN</string>
    <string name="login_hint">Enter Your Phone</string>
    <string name="not_reg">This phone number is not registered!!</string>
    <string name="logout">Logout</string>
    <string name="order_code">Order Code..</string>
    <string name="shop_money">Shop Money..</string>
    <string name="client_paid">Client Paid..</string>
    <string name="add_order">Add Order</string>
    <string name="total_balance">Total balance</string>
    <string name="total_profit">Total Profit</string>
    <string name="added">Added !!</string>
    <string name="active">Password is not correct!!</string>
    <string name="error">Shop money can\'t be more than paid money!!</string>
    <string name="days">Days</string>
    <string name="back">Click again to exit</string>
    <string name="not_internet">You have no internet connection!!</string>
    <string name="password">Enter your password</string>
    <string name="req">All fields are required!!</string>
    <string name="remove">Remove</string>
    <string name="removed_message">Removed!!</string>
    <string name="dialog_title">Remove Order</string>
    <string name="dialog_body">Are you sure to remove this order ?</string>
    <string name="payment">Payments</string>
    <string name="payment_hint">Money Sum...</string>
    <string name="pay">Pay</string>
    <string name="enter_money">Enter sum of money!!</string>
    <string name="no_connection">No Connection!!</string>
    <string name="all_paid">All Paid</string>
    <string name="total_orders">Total Orders</string>
</resources>